style: fix overflow and overview

--- a/src/features/Designer/components/ChangeLog/changeLog.module.scss
+++ b/src/features/Designer/components/ChangeLog/changeLog.module.scss
@@ -1,9 +1,10 @@
 .container {
-  padding: 2rem 2rem 1rem;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
+  height: calc(100vh - 12rem);
+  margin: 0 auto;
   overflow: auto;
+  padding: 2rem 2rem 1rem;
   width: 100%;
 
   :global .bmrg--b-loading-animation__text {
