--- a/src/features/Designer/components/Overview/overview.module.scss
+++ b/src/features/Designer/components/Overview/overview.module.scss
@@ -48,7 +48,8 @@
 
 .wrapper {
   display: flex;
-  height: fit-content;
+  height: calc(100vh - 12rem);
+  overflow: auto;
 
   :global .bx--text-area__wrapper {
     width: 100%;
@@ -101,7 +102,6 @@
 .iconsWrapper {
   display: flex;
   flex-flow: wrap;
-  justify-content: space-between;
 
   :global .bx--assistive-text {
     text-transform: capitalize;
